--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
-name: bbj
-bio: A Man who travels the world eating noodles
+name: Bae Byoung Joo
+bio: 
 
 # twitter summary info
 description: A blog about technology and stuff related
