--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Bae Byoung Joo
-bio: 
+bio: Let's get better today than yesterday.
 
 # twitter summary info
 description: A blog about technology and stuff related
