--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ email: ulsanbbj@gmail.com
 authors:
     bbj:
         name: Bae Byoung Joo
-        bio: A Man who travels the world eating noodles
+        bio: Let's get better today than yesterday.
         external-image: false
 #         picture: assets/images/profile.jpg
 #         twitter: johndoe
