--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 #--------------------------
 
-title: Chirpy
+#title: bx2j
 
 description: 'Let's get better today than yesterday.'
 
