--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 #--------------------------
-
-#title: bx2j
-
+---
+title: bx2j
+---
 description: 'Let's get better today than yesterday.'
 
 # Replace with your domain, e.g. "https://username.github.io"
