--- a/_config.yml
+++ b/_config.yml
@@ -6,28 +6,28 @@
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 #--------------------------
 
-title: Chirpy
+title: Bae Byoung Joo
 
 description: 'A text-based Jekyll theme.'
 
 # Replace with your domain, e.g. "https://username.github.io"
 url: 'https://bx2j.github.io'
 
-author: Chirpy                          # change to your full name
+author: Bae Byoung Joo                          # change to your full name
 
 logo: /assets/img/sample/profile.jpg    # Support network resources.
 
 github:
-  username: github_username             # change to your github username
+  username: bx2j             # change to your github username
 
-twitter:
-  username: twitter_username            # change to your twitter username
+#twitter:
+#  username: twitter_username            # change to your twitter username
 
 social:
-  name: Chirpy                          # change to your full name
-  email: example@doamin.com             # change to your email address
+  name: Bae Byoung Joo                          # change to your full name
+  email: ulsanbbj@gmail.com             # change to your email address
   links:
-    - https://twitter.com/username      # change to your twitter homepage
+    - https://twitter.com/bx2j      # change to your twitter homepage
     - https://github.com/username       # change to your github homepage
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
