--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 title: Bae Byoung Joo
 
-description: 'Let's get better today than yesterday.'
+description: 'A text-based Jekyll theme.'
 
 # Replace with your domain, e.g. "https://username.github.io"
 url: 'https://bx2j.github.io'
