--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ toc: true
 
 
 # if your site type is Project Pages site, change below value to '/projectname'
-baseurl: ''
+baseurl: '/'
 
 paginate: 10
 
