--- a/_config.yml
+++ b/_config.yml
@@ -31,15 +31,15 @@ social:
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-#google_site_verification: google_meta_tag_verification # change to your verification string
+google_site_verification: google_meta_tag_verification # change to your verification string
 
 #--------------------------
 
 # Change to your Google Analytics ID
-#google_analytics:
-#  id: 'UA-*********-*'
+google_analytics:
+  id: 'UA-*********-*'
   # Switch for Google Analytics pageviews. DO NOT enable it unless you know how to deploy the Google Analytics superProxy.
-#  pv: false
+  pv: false
 
 disqus:
   shortname: 'disqus'   # Change to your Disqus shortname.
