--- a/_config.yml
+++ b/_config.yml
@@ -6,41 +6,41 @@
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 #--------------------------
 
-title: Chirpy
+title: Bae Byoung Joo
 
-description: 'A text-based Jekyll theme.'
+description: 'No pain, No gain.'
 
 # Replace with your domain, e.g. "https://username.github.io"
-url: 'https://www.example.com'
+url: 'https://bx2j.github.io'
 
 author: Chirpy                          # change to your full name
 
-logo: /assets/img/sample/profile.jpg    # Support network resources.
+logo: /assets/img/profile.jpg    # Support network resources.
 
 github:
-  username: github_username             # change to your github username
+  username: bx2j             # change to your github username
 
-twitter:
-  username: twitter_username            # change to your twitter username
+# twitter:
+  # username: twitter_username            # change to your twitter username
 
 social:
-  name: Chirpy                          # change to your full name
-  email: example@doamin.com             # change to your email address
+  name: Bae Byoung Joo                          # change to your full name
+  email: ulsanbbj@gmail.com             # change to your email address
   links:
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    # - https://twitter.com/username      # change to your twitter homepage
+    - https://github.com/bx2j       # change to your github homepage
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-google_site_verification: google_meta_tag_verification # change to your verification string
+# google_site_verification: google_meta_tag_verification # change to your verification string
 
 #--------------------------
 
 # Change to your Google Analytics ID
-google_analytics:
-  id: 'UA-*********-*'
+# google_analytics:
+  # id: 'UA-*********-*'
   # Switch for Google Analytics pageviews. DO NOT enable it unless you know how to deploy the Google Analytics superProxy.
-  pv: false
+  # pv: false
 
 disqus:
   shortname: 'disqus'   # Change to your Disqus shortname.
