--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,12 @@ description: 'No pain, No gain.'
 # Replace with your domain, e.g. "https://username.github.io"
 url: 'https://bx2j.github.io'
 
-author: Chirpy                          # change to your full name
+author: Bae Byoung Joo           # change to your full name
 
 logo: /assets/img/profile.jpg    # Support network resources.
 
 github:
-  username: bx2j             # change to your github username
+  username: bx2j                 # change to your github username
 
 # twitter:
   # username: twitter_username            # change to your twitter username
